[fix] Derive javac --release from project SDK in dynamic compile step